[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=. --cov-report=term-missing"

[tool.poetry]
name = "spotify-muse"
version = "0.1.0"
description = "AI-powered Spotify playlist generator"
authors = ["sayler666 <lukasz.chromy@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = ">=3.12"
spotipy = ">=2.23.0"
anthropic = ">=0.18.1"
python-dotenv = ">=1.0.0"
colorama = ">=0.4.6"
configparser = ">=6.0.0"
click = ">=8.1.7"
rich = ">=13.9.4,<14.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"